--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^2.5.3",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
@@ -35,6 +36,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
