--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "socket.io-client": "^1.4.6"
   }
 }
